# taosx_data_format_bench

./: Cargo.toml  sample  sample.avro
benches/: benchmark.rs  disk_bench.rs  time_bench.rs
src/: avro.rs  lib.rs  my_parquet.rs
